Add image upload functionality and fix RLS policies
Features:
- Direct image upload to Supabase Storage
- Image preview before upload
- File validation (type & size)
- Support for PNG, JPG, JPEG, WebP (max 20MB)
- Replace URL input with file upload UI

Fixes:
- Update RLS policies to allow admin operations
- Fix product save/edit/delete permissions

Files changed:
- supabase_schema.sql: Updated RLS policies
- supabase_update_policies.sql: New migration for existing DBs
- supabase-client.js: Added storage upload/delete functions
- index.html: New image upload UI
- script.js: Image handling & validation logic
- SETUP_INSTRUCTIONS.md: Step-by-step setup guide

--- a/index.html
+++ b/index.html
@@ -437,8 +437,23 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Image URL *</label>
-                        <input type="url" id="productImage" placeholder="https://..." required>
+                        <label>Product Image *</label>
+                        <div class="image-upload-container">
+                            <input type="file" id="productImageFile" accept="image/png,image/jpeg,image/jpg,image/webp" style="display: none;">
+                            <button type="button" class="btn btn-secondary" id="selectImageBtn">
+                                <i class="fas fa-upload"></i> Choose Image
+                            </button>
+                            <span id="imageFileName" style="margin-left: 10px; color: var(--text-gray);"></span>
+                            <div id="imagePreview" style="margin-top: 10px; display: none;">
+                                <img id="previewImg" style="max-width: 200px; max-height: 200px; border: 1px solid var(--border-color); border-radius: 4px;" alt="Preview">
+                                <button type="button" class="btn btn-danger btn-small" id="removeImageBtn" style="display: block; margin-top: 5px;">
+                                    <i class="fas fa-times"></i> Remove Image
+                                </button>
+                            </div>
+                            <small style="display: block; margin-top: 5px; color: var(--text-gray);">
+                                Supported formats: PNG, JPG, JPEG, WebP (Max 20MB)
+                            </small>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -447,6 +462,7 @@
                     </div>
 
                     <input type="hidden" id="productId">
+                    <input type="hidden" id="productImageUrl">
                 </form>
             </div>
             <div class="modal-footer">
