feat: Add 'One Way Clutch' category and 'Te & Gcr'   material options

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                             <button class="category-btn" data-category="rivets">
                                 <i class="fas fa-dot-circle"></i> Rivets
                             </button>
+                            <button class="category-btn" data-category="one-way-clutch">
+                                <i class="fas fa-cog"></i> One Way Clutch
+                            </button>
                         </div>
                     </div>
 
@@ -146,6 +149,7 @@
                                 <option value="carbon-steel">Carbon Steel</option>
                                 <option value="brass">Brass</option>
                                 <option value="aluminum">Aluminum</option>
+                                <option value="te-gcr">Te & Gcr</option>
                             </select>
                         </div>
                         <div class="filter-group">
@@ -407,6 +411,7 @@
                                 <option value="washers">Washers</option>
                                 <option value="anchors">Anchors</option>
                                 <option value="rivets">Rivets</option>
+                                <option value="one-way-clutch">One Way Clutch</option>
                             </select>
                         </div>
                     </div>
@@ -420,6 +425,7 @@
                                 <option value="carbon-steel">Carbon Steel</option>
                                 <option value="brass">Brass</option>
                                 <option value="aluminum">Aluminum</option>
+                                <option value="te-gcr">Te & Gcr</option>
                             </select>
                         </div>
                         <div class="form-group">
