fix: Make category sidebar dynamic from database
Issue: Categories in frontend sidebar were hardcoded, so deleting
categories in admin panel didn't update the frontend.

Changes:
- Replace hardcoded category buttons with dynamic loading
- Add categoryIcons mapping for category icons
- Add renderCategorySidebar() to dynamically render categories
- Add attachCategoryListeners() to handle category click events
- Update loadCategoriesFromDB() to refresh sidebar
- Remove duplicate event listener code

Now when categories are added/deleted in admin panel, the frontend
sidebar automatically updates to reflect the changes.

--- a/index.html
+++ b/index.html
@@ -111,30 +111,10 @@
                 <aside class="sidebar">
                     <div class="sidebar-section">
                         <h3>Categories</h3>
-                        <div class="category-list">
+                        <div class="category-list" id="categoryList">
+                            <!-- Categories will be loaded dynamically from database -->
                             <button class="category-btn active" data-category="all">
                                 <i class="fas fa-th"></i> All Products
-                            </button>
-                            <button class="category-btn" data-category="screws">
-                                <i class="fas fa-bolt"></i> Screws
-                            </button>
-                            <button class="category-btn" data-category="bolts">
-                                <i class="fas fa-grip-lines"></i> Bolts
-                            </button>
-                            <button class="category-btn" data-category="nuts">
-                                <i class="fas fa-circle-notch"></i> Nuts
-                            </button>
-                            <button class="category-btn" data-category="washers">
-                                <i class="fas fa-circle"></i> Washers
-                            </button>
-                            <button class="category-btn" data-category="anchors">
-                                <i class="fas fa-anchor"></i> Anchors
-                            </button>
-                            <button class="category-btn" data-category="rivets">
-                                <i class="fas fa-dot-circle"></i> Rivets
-                            </button>
-                            <button class="category-btn" data-category="one-way-clutch">
-                                <i class="fas fa-cog"></i> One Way Clutch
                             </button>
                         </div>
                     </div>
