feat: Replace 'NaxiWell' with 'CHANGZHOU NEW SOUTH WALES TRADING' in English and '常州纽修威商贸' in Chinese

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NaxiWell Industrial & Hardware Supplier</title>
+    <title>CHANGZHOU NEW SOUTH WALES TRADING - Hardware Supplier</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- EmailJS SDK -->
@@ -23,7 +23,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-tools"></i>
-                    <span>NaxiWell Industrial</span>
+                    <span data-i18n="company_name">CHANGZHOU NEW SOUTH WALES TRADING</span>
                 </div>
                 <nav class="main-nav">
                     <a href="#products" class="nav-link active" data-i18n="nav_products">Products</a>
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h4>NaxiWell Industrial</h4>
+                    <h4 data-i18n="company_name">CHANGZHOU NEW SOUTH WALES TRADING</h4>
                     <p data-i18n="footer_tagline">Your trusted partner for quality hardware solutions since 2015.</p>
                 </div>
                 <div class="footer-section">
