fix: Remove required validation from product description field

--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label><span data-i18n="product_description">Description</span> <span class="required">*</span></label>
-                        <textarea id="productDescription" rows="4" required></textarea>
+                        <label data-i18n="product_description">Description</label>
+                        <textarea id="productDescription" rows="4"></textarea>
                     </div>
 
                     <div class="form-group">
