feat: Move admin button to footer bottom-right corner with near-invisible styling

--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
                 </nav>
                 <div class="header-actions">
                     <button class="lang-btn" id="langBtn">中文</button>
-                    <button class="admin-btn" id="adminBtn">
-                        <i class="fas fa-cog"></i>
-                        <span data-i18n="nav_admin">Admin</span>
-                    </button>
                     <button class="cart-btn" id="cartBtn">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count">0</span>
@@ -231,6 +227,9 @@
             </div>
             <div class="footer-bottom">
                 <p data-i18n="footer_copyright">&copy; 2025 NaxiWell Industrial. All rights reserved.</p>
+                <button class="hidden-admin-btn" id="adminBtn">
+                    <i class="fas fa-cog"></i>
+                </button>
             </div>
         </div>
     </footer>
